# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: format.yml  pylint.yml  tests.yml
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl_sekvenssikaavio.md  monopoli.md
minesweeper/: pyproject.toml  tasks.py
minesweeper/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
minesweeper/dokumentaatio/kuvat/dio/: pakkauskaavio.dio
minesweeper/src/: initialize_database.py
minesweeper/src/entities/: board_status.py  difficulty.py  result.py
minesweeper/src/logic/: board.py  board_status.py  minesweeper.py  piece.py
minesweeper/src/repositories/: result_repository.py
minesweeper/src/services/: result_service.py
minesweeper/src/tests/logic/: board_test.py  minesweeper_test.py
minesweeper/src/tests/repositories/: result_repository_test.py
minesweeper/src/tests/services/: result_service_test.py
minesweeper/src/ui/: button.py  frame.py  gameview.py  menu.py  number_board.py  start_face.py  stats.py  tile.py  titlebar.py  ui.py
minesweeper/src/ui/utils/: draw_outline.py
