[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Erik-Peik Mende",email = "erik-peik.mende@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "invoke (>=2.2.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
