[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = ["Erik-Peik Mende <erik-peik.mende@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"
pytest = "^8.3.5"
coverage = "^7.8.0"
autopep8 = "^2.3.2"
